--- a/templates/Cart/index.html.twig
+++ b/templates/Cart/index.html.twig
@@ -88,7 +88,7 @@
 								</tr>
 							</tfoot>
 						</table>
-						<a href="{{path('cart_index') }}" class="btn btn-primary">Valider le Panier</a>
+						<a href="{{path('order_create') }}" class="btn btn-primary">Valider le Panier</a>
 						<a href="{{path('cart_removeAll')}}">
 							Supprimer tout mon panier
 						</a>
