--- a/templates/Cart/index.html.twig
+++ b/templates/Cart/index.html.twig
@@ -72,7 +72,9 @@
 								</tr>
 								<tr>
 									<td colspan="3">frais de port</td>
-									{% if pttc < 200 %}
+									<td> {{ fdp }} €</td>
+
+									{# {% if pttc < 200 %}
 										<td> {{ fdp }} €</td>
 
 									{% endif %}
@@ -80,7 +82,7 @@
 									{% if pttc > 200 %}
 										<td> 0 €</td>
 
-									{% endif %}
+									{% endif %} #}
 								</tr>
 
 								<tr>
