--- a/templates/_parties/_nav.html.twig
+++ b/templates/_parties/_nav.html.twig
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-danger" data-bs-theme="light">
-	<div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-danger bg-danger">
 		<a class="navbar-brand" href="#">LYARHAIR</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
