--- a/templates/commande/recap.html.twig
+++ b/templates/commande/recap.html.twig
@@ -25,13 +25,11 @@
                     <label class="form-check-label d-flex justify-content-between"> 
                         <span class="d-block fs-base text-dark fw-medium mb-1">{{livraison | raw }}</span>
                     </label>
-                </div>
-
-                <div class="col-lg-5 offset-lg-1 pt-1 btn btn-light"> 
+                </div> 
+                    <hr />
                     {# {{dump(recapCart) }} #}
                     <h2 class="pb-2 pt-md-2 my-4 mt-lg-5">Récapitulatif de la commande
-                        <span class='fs-base fw-normal text-muted'>({{ recapCart|length }}
-                            produit)
+                        <span class='fs-base fw-normal text-muted'>({{ recapCart|length }} produit)
                         </span>
                     </h2>
                     {% set total1 = null %}
