--- a/templates/commande_crud/edit.html.twig
+++ b/templates/commande_crud/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modification de commande{% endblock %}
+{% block title %}Edit Commande{% endblock %}
 
 {% block body %}
-    <h1>Modification de commande</h1>
+    <h1>Edit Commande</h1>
 
-    {{ include('commande_crud/_form.html.twig', {'button_label': 'Mise à jour'}) }}
+    {{ include('commande_crud/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_commande_crud_index') }}">Retour à la liste</a>
+    <a href="{{ path('app_commande_crud_index') }}">back to list</a>
 
     {{ include('commande_crud/_delete_form.html.twig') }}
 {% endblock %}
